# open-llm-rag

./: .env  .gitignore  Makefile  Readme.md  Technical.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/: .env  config.toml  file.txt  main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: __init__.py  file.py  qa.py
backend/app/core/: config.py  database.py  dependencies.py  logger.py  wandb_utils.py
backend/app/factories/: embedding_factory.py  llm_factory.py
backend/app/models/: __init__.py  base.py  cohere.py  evaluation.py  ollama.py  openai.py  qa.py
backend/app/models/embedding/: base.py  ollama.py  openai.py
backend/app/models/llm/: base.py  ollama.py  openai.py
backend/app/services/: document_processor.py  document_service.py  embedding_service.py  evaluation_service.py  file_service.py  llm_factory.py  model_service.py  processor_factory.py  qa_service.py  vector_store_service.py
backend/app/workers/: evaluation_worker.py
deployments/: docker-compose.yml
deployments/docker/: Dockerfile.backend  Dockerfile.frontend
deployments/docker/ollama/: Dockerfile.ollama  start.sh
frontend/: home.py
frontend/pages/: 1_File_Upload.py  2_Chat.py
