[project]
name = "open-inno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
  "jsonpatch>=1.33",
  "langchain-community>=0.2.16",
  "langchain-ollama>=0.1.3",
  "pypdf>=4.3.1",
  "pyyaml>=6.0.2",
  "langsmith>=0.1.116",
  "numpy>=1.26.0",
  "packaging>=24.1",
  "pydantic>=2.9.1",
  "requests>=2.32.3",
  "ruff>=0.6.4",
  "tenacity>=8.1.0",
  "uvicorn>=0.30.6",
  "fastapi>=0.114.0",
  "faiss-cpu>=1.8.0.post1",
  "loguru>=0.7.2",
  "streamlit>=1.38.0",
  "websockets>=13.0.1",
  "httpx>=0.27.2",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.4.0",
  "langchain-anthropic>=0.1.23",
  "langchain-cohere>=0.2.4",
  "langchain-openai>=0.1.23",
  "python-multipart>=0.0.9",
  "wandb>=0.18.0",
  "weave>=0.51.6",
  "sqlalchemy>=2.0.34",
]
